[project]
name = "mcp-server-pcileech"
version = "0.1.0"
description = "MCP Server for PCILeech - Memory debugging via Model Context Protocol"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.23.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py", "config.json"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
